syntax = "proto3";

service SmartChairStudentInterfaceService{
    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // get All Values
    //
    rpc getAll (ChairRequest) returns (ChairResponse) {}

    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Distance
    //
    rpc getDistance (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "distance": {
    //          "value":20,                         // JSON Number without decimal digits
    //          "timestamp":1520442151              // 64-Bit UTC timestamp from creation of message at hardware device.
    //      }
    // }
    // distance is provided in cm

    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Temperature
    //
    rpc getTemperature (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "temperature": {
    //          "value":20.0,                       // JSON Number with one decimal digit
    //          "timestamp":1520442151
    //      }
    // }
    // temperature os provided in degrees Celsius

    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Pressure
    //
    rpc getPressureAll (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "backrest": {
    //          "values":[],                                // 6x (10-Bit Integer unsigned) as JSON Number
    //          "timestamp":1520442151
    //      },
    //      "seat": {
    //          "values":[],                                // 4x (10-Bit Integer unsigned) as JSON Number
    //          "timestamp":1520442151
    //      }
    // }
    rpc getPressureBackrest (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "backrest": {
    //          "values":[],
    //          "timestamp":1520442151
    //      }
    // }
    rpc getPressureSeat (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "seat": {
    //          "values":[],
    //          "timestamp":1520442151
    //      }
    // }

    ////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
    // Gyroscope
    //
    rpc getMotionAll (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "backrest":{
    //          "rotationAngle": [],                        // JSON Number
    //          "acceleration": [],                         // 3x (16-Bit Integer signed) as JSON Number
    //          "gyroscope": [],                            // 3x (16-Bit Integer) as JSON Number
    //          "timestamp":1520442151
    //      },
    //      "seat":{
    //          "rotationAngle": [],
    //          "acceleration": [],
    //          "gyroscope": [],
    //          "timestamp":1520442151
    //      }
    // }
    rpc getMotionBackrestAll (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "rotationAngle": [],
    //      "acceleration": [],
    //      "gyroscope": [],
    //      "timestamp":1520442151
    // }
    rpc getMotionBackrestGyroscope (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "gyroscope": [],
    //      "timestamp":1520442151
    // }
    rpc getMotionBackrestAccelerometer (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "acceleration": [],
    //      "timestamp":1520442151
    // }
    rpc getMotionBackrestRotationAngle (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "rotationAngle": [],
    //      "timestamp":1520442151
    // }

    rpc getMotionSeatAll (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "rotationAngle": [],
    //      "acceleration": [],
    //      "gyroscope": [],
    //      "timestamp":1520442151
    // }
    rpc getMotionSeatGyroscope (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "gyroscope": [],
    //      "timestamp":1520442151
    // }
    rpc getMotionSeatAccelerometer (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "acceleration": [],
    //      "timestamp":1520442151
    // }

    rpc getMotionSeatRotationAngle (ChairRequest) returns (ChairResponse) {}
    // json:
    // {
    //      "rotationAngle": [],
    //      "timestamp":1520442151
    // }
}

message ChairResponse{
    int32 version = 1;			// Protocol version between OE HAL and device
    bool success = 2;           // Success of the request
    int64 timestamp = 3;		// UTC timestamp of Request processing
    string json = 4;			// JSON set containing elements with format
}

message ChairRequest{
    int32 version = 1;          // Request Version
}
